verify button alignment issue fxd

--- a/app/javascript/components/record-form/form/subforms/styles.css
+++ b/app/javascript/components/record-form/form/subforms/styles.css
@@ -1,13 +1,13 @@
 .verifiedSpan{
   color: white;
   height: 25px;
-  width: 65px;
   font-size: 13px;
   font-weight: 600;
   float: right;
-  top: 15px;
+  top: 12px;
   position: absolute;
-  margin-left: 80%;
+/*  margin-left: 85%;*/
+  left: 87%;
 }
 .secondarySubformHeader {
   font-size: var(--fs-12);
